# RAG-Chatbot

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Folder-Strcuture 2.md  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  sample.py
.github/workflows/: pr-checks.yml
Src/: main.py
Src/Cache/: cache.py
Src/Config/: config.py
Src/Controllers/: auth_controller.py  chat_controller.py  ingestion_controller.py  prompt_controller.py  token_usage_controller.py
Src/DTO/: auth_dto.py  chat_dto.py  ingestion_dto.py  token_usage_dto.py
Src/Database/: chroma_client.py  database.py
Src/Error-Codes/: __init__.py  exceptions.py
Src/Error_Codes/: __init__.py  _exceptions.py
Src/Loggers/: __init__.py  logger.py
Src/Middleware/: auth_middleware.py  encryption_middleware.py
Src/Migration/: migrate.py
Src/Observability/: tracer.py
Src/Repository/: conversation_repository.py  token_usage_repository.py  user_repository.py  vector_repository.py
Src/Repository/Models/: conversation_model.py  token_usage_model.py  user_model.py
Src/Routers/: router.py
Src/Service/: auth_service.py  bedrock_factory.py  bm25_service.py  chat_service.py  ingestion_service.py  reranker_service.py
Src/Service/prompts/: prompt_registry.py  rag_prompt_v1.txt
Src/Utilities/: citation_utils.py  password_utils.py  token_utils.py
Test/Service/: test_auth_service.py  test_chat_service.py
data/chroma/: chroma.sqlite3
frontend/: index.html
